fix: improve responsive on mobile view

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,7 @@
 
     > app-main-infos, app-detailled-infos {
       flex: 1;
+      padding: 0 1.6em;
     }
   }
 }
